# tastytrade-algo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
config/: engine.json
data/cache/: SPY_daily_20200101_20231231.csv  SPY_daily_20230101_20250329.csv
examples/: example-usage.py
reports/run_20250329_221533_SPY/: parameters.txt
reports/run_20250329_224933_SPY/: equity_curve.csv  metrics.csv  report.txt  signals.csv  trades.csv
reports/run_20250329_230453_SPY/: equity_curve.csv  signals.csv  trades.csv
reports/run_20250329_231430_SPY/: equity_curve.csv  metrics.csv  report.txt
reports/run_20250329_232631_SPY/: signals.csv  trades.csv
src/tastytrade_algo/: backtest-example.py  backtest-framework.py  cli-interface.py  data-fetcher.py  data_fetcher.py  main.py  portfolio-manager.py  strategy-manager.py  strategy.py  tastytrade_api.py  trading-engine.py
tests/: test_connection.py  test_strategy.py
